# TelegramReferralPro

./: .env  .env.example  BOT_STATUS_REPORT.md  FINAL_STATUS.md  MULTILINGUAL_GUIDE.md  README.md  SETUP_GUIDE.md  bot_database.db  bot_handlers.py  config.py  fix_env.py  fix_referral_links.py  languages.py  main.py  messages.py  pyproject.toml  referral_system.py  replit.md  requirements.txt  run_bot_simple.py  setup.py  test_bot.py  utils.py
telegramreferralpro/: .env  README.md  __init__.py  bot_handlers.py  config.py  database.py  languages.py  main.py  messages.py  referral_system.py  render.yaml  utils.py
telegramreferralpro/background-worker-project/: README.md  package.json
telegramreferralpro/background-worker-project/src/: worker.ts
telegramreferralpro/background-worker-project/src/types/: index.ts
