[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TelegramReferralPro"
version = "1.0.0"
description = "Telegram Referral Bot"
authors = [
    { name = "official-prince" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
